Revisão aula Panorama e anotações dos seminários Turma A

--- a/Materias/2S2020/PED_CE342/Aulas/Atas.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Atas.org
@@ -490,7 +490,7 @@
 
 ** Panorama FHC e implementação do regime de metas
 
-A década de 90, diferentemente da década anterior, está inserida em um contexto de retomada dos fluxos voluntários de capital (alta da liquidez internacional) em que as reformas liberalizantes desempenharam um papel norteador.
+A década de 90, diferentemente da década anterior, está inserida em um contexto de retomada dos fluxos voluntários de capital (*alta da liquidez internacional*) em que as *reformas liberalizantes* desempenharam um papel norteador.
 Nesses moldes, caberia ao Estado promover a estabilidade macroeconômica bem como funcionamento dos mercados.
 A dinamização da economia, por sua vez, estaria a cargo do setor privado junto dos ganhos (de produtividade e competitividade) decorrentes das aberturas comercial e financeira.
 Como consequência, desmontou-se a ossatura do Estado desenvolvimentista.
@@ -505,7 +505,7 @@ Em meio a esses objetivos, a taxa de juros (elevadas) teve um papel duplo:
 Desse modo, a estabilização monetária foi estabelecida às custas da estabilidade macroeconômica cite:belluzzoDepoisQuedaEconomia2002.
 Em paralelo, como resultado das queimas de reservas em 1997/8, a âncora cambial foi substituída pelo regime de câmbio flutuante enquanto, em 1999, aderiu-se ao regime de metas para a inflação de modo a estabelecer uma âncora nominal doméstica.
 
-Nos governos FHC, portanto, manteve-se o binômio juros elevado-câmbio sobrevalorizado, implicando em uma dinâmica /stop and go/, aumento do desemprego e crises bancárias e do balanço de pagamentos.
+Nos governos FHC, portanto, manteve-se o binômio *juros elevado-câmbio sobrevalorizado*, implicando uma dinâmica /stop and go/, aumento do desemprego e crises bancárias e do balanço de pagamentos.
 É em meio ao esse cenário adverso (``Herança Maldita'') que o governo Lula se inicia mas foi seguido de uma redução da restrição externa em decorrência da engrenagem comercial entre EUA-China-Periferia, elevando o ciclo de liquidez e promovendo melhora nos termos de troca (/boom/ de /commodities/) cite:carneiroDesenvolvimentoEmCrise2002. 
 
 ** Breve esquema do modelo de metas
@@ -513,20 +513,19 @@ Nos governos FHC, portanto, manteve-se o binômio juros elevado-câmbio sobreval
 ** Continuísmo e descontinuidades dos governos Lula
 
 Apesar da melhora da adversidade do setor externo, tal governo é marcado, até 2006, por um *continuísmo*. 
-A preocupação com a solvência da dívida pública bem como da adesão da contração fiscal expansionista é um dos traços desse conservadorismo. 
-Do ponto de vista dos fluxos, verificou-se uma deterioração da composição dos gastos em que ampliou-se os encargos com juros em detrimento do investimento público para gerar superávits fiscais.
-Já em termos dos estoques, observa-se uma melhora da dívida pública (principalmente externa) junto de uma piora de seus prazos e custos.
+A preocupação com a solvência da dívida pública bem como da adesão da *contração fiscal expansionista* é um dos traços desse conservadorismo.
+# Do ponto de vista dos fluxos, verificou-se uma deterioração da composição dos gastos em que ampliou-se os encargos com juros em detrimento do investimento público para gerar superávits fiscais.
+# Já em termos dos estoques, observa-se uma melhora da dívida pública (principalmente externa) junto de uma piora de seus prazos e custos.
 A melhora da dívida em moeda estrangeira, no entanto, não indica que a restrição externa foi superada, mas sim que reaparece sob novas formas.
 Por fim, destaca-se que o governo também aprofunda a abertura financeira cite:pratesSECAOIVInsercao.
 
-Apesar deste continuísmo macroeconômico, o governo Lula apresentou uma ruptura não-trivial: centralidade da questão social.
+Apesar deste continuísmo macroeconômico, o governo Lula apresentou uma ruptura não-trivial: *centralidade da questão social*.
 Esta ênfase da questão social é impulsionada com o progressivo abandono do conservadorismo fiscal.
-A *partir de 2006* ---  e acentuado no pós-crise --- tem início uma estratégia mais clara que coloca no Estado o papel de
-articular o desenvolvimento em que o planejamento de longo prazo é retomado (ex: PAC). 
-Assim, a despeito de um banco central ainda bastante ortodoxo e da política de valorização cambial, coube à política fiscal assumir para si o papel de provedora do crescimento. 
+A *partir de 2006* ---  e acentuado no pós-crise --- tem início uma estratégia mais clara que coloca no Estado o papel de articular o desenvolvimento em que o planejamento de longo prazo é retomado (ex: PAC).
+Assim, a despeito de um banco central ainda bastante ortodoxo e da política de valorização cambial, coube à *política fiscal* assumir para si o papel de provedora do crescimento.
 Assume esse papel, no entanto, sem que se mude o regime fiscal instaurado por FHC, mas há uma nova gestão fiscal e orçamentária.
 
-Sendo assim, a contração fiscal expansionista deu lugar a uma política fiscal mais ativa sem implicar em uma deterioração da dinâmica da dívida pública. 
+Sendo assim, a contração fiscal expansionista deu lugar a uma política fiscal mais ativa sem implicar uma deterioração da dinâmica da dívida pública.
 Dentre os fatores que permitiram tal guinada, destaca-se os descontos do investimento público na metas de superávit primário da LDO bem como aumento da arrecadação.
 Em linhas gerais, o aumento das receitas reflete a centralidade da questão social mencionada anteriormente que foi além de transferências e gastos sociais e avançou em direção às mudanças no mercado de trabalho (formalização e ganhos salariais reais) e ampliação do crédito.
 Em conjunto, tais medidas promoveram --- dada a redução da restrição externa --- o crescimento baseado no mercado interno junto da melhora na distribuição de renda.
@@ -534,7 +533,7 @@ Essa combinação de crescimento com inclusão social --- levada adiante pelo go
 
 Em relação a *estrutura produtiva*, nota-se o insucesso em promover uma política industrial e creditícia capaz de reverter algumas tendências estruturais.
 Nesses termos, a restrição externa reaparece sob novas formas.
-Em outras palavras, o governo Lula se encerra com um *descompasso* entre uma estrutura de demanda modernizada que não foi acompanhada da modernização da estrutura de oferta cite:melloIndustrialismoAusteridadePolitica.
+Em outras palavras, o governo Lula se encerra com um *descompasso* entre uma *estrutura de demanda modernizada que não foi acompanhada da modernização da estrutura de oferta* cite:melloIndustrialismoAusteridadePolitica.
 O governo Dilma herda esses desafios estruturais, buscando readequar o modelo de
 crescimento em contexto internacional mais difícil.
 
@@ -543,24 +542,25 @@ crescimento em contexto internacional mais difícil.
 Em meio ao diagnóstico de *sobreaquecimento* da economia, são adotadas medidas macroprudenciais e de redução de gasto.
 Após o entendimento de que esse diagnóstico foi inadequado, o governo Dilma passa a
 aprofundar a direção do desenvolvimentismo.
-De modo a superar os entraves mencionados anteriormente, adota-se uma agenda industrialista.
-No centro da análise estava a necessidade de melhorar a competitividade industrial (pela desvalorização cambial) e a rentabilidade do investimento privado por meio de redução de custos (política monetária e fiscal). Vale notar que esta reordenação de prioridades foi feita sem que, para isso, fosse necessário abandonar a centralidade da questão social.
+De modo a superar os entraves mencionados anteriormente, adota-se uma *agenda industrialista*.
+No centro da análise estava a necessidade de melhorar a competitividade industrial (pela *desvalorização cambial*) e a rentabilidade do investimento privado por meio de redução de custos (política monetária e fiscal).
+Vale notar que esta reordenação de prioridades foi feita sem que, para isso, fosse necessário abandonar a centralidade da questão social.
 
 Alinhado com a agenda industrialista e em meio a retomada (súbita) dos fluxos de capital, a política cambial esteve no centro.
-De modo a evitar a valorização e volatilidade do câmbio para melhorar a competitividade industrial, foram feitas intervenções no mercado interbancário.
-Como resultado, reduziu a especulação pela apreciação e desprendeu o real do ciclo de liquidez internacional.
+# De modo a evitar a valorização e volatilidade do câmbio para melhorar a competitividade industrial, foram feitas intervenções no mercado interbancário.
+# Como resultado, reduziu a especulação pela apreciação e desprendeu o real do ciclo de liquidez internacional.
 Além do rompimento da valorização cambial enquanto instrumento de controle inflacionário, a *política monetária* também foi redirecionada para a agenda industrialista (sem romper com o RMI).
 
 Na ausência de um padrão de financiamento autônomo de longo prazo, os bancos públicos foram acionados para reduzir a taxa de juros e os spreads bancários para facilitar o financiamento do desenvolvimento.
 Com redução da Selic e política cambial ativa, o controle de preços contou com o
-represamento de preços administrados (com finalidade também de reduzir custos).
-Na tentativa de ampliar o horizonte temporal do financiamento público, alterou-se o manejo da dívida pública substituindo LFTs por títulos pré-fixados para, assim, estimular o mercado de longo prazo. 
+represamento de *preços administrados* (com finalidade também de reduzir custos).
+# Na tentativa de ampliar o horizonte temporal do financiamento público, alterou-se o manejo da dívida pública substituindo LFTs por títulos pré-fixados para, assim, estimular o mercado de longo prazo.
 
 
 Em paralelo, fez-se uso da política fiscal por meio de incentivos, desonerações e concessões para promover investimento privado (em infraestrutura).
 Além disso, é importante destacar que, na ausência de um padrão de financiamento autônomo de longo prazo, o financiamento ficou a cargo do setor público (BNDES).
 Dentre as consequências, verificou-se uma deterioração do saldo fiscal cujo principal condicionante foi a redução das *receitas*.
-No que diz respeito aos gastos, destaca-se uma redução do investimento público em que ampliou-se a participação relativa dos gastos com pessoal.
+# No que diz respeito aos gastos, destaca-se uma redução do investimento público em que ampliou-se a participação relativa dos gastos com pessoal.
 Assim, reduziu-se o efeito expansionista da política fiscal dada a concentração de gastos com menores multiplicadores fiscais.
 
 ** Conclusão e comparação geral
@@ -570,37 +570,37 @@ Os governos FHC e parte do governo Lula são caracterizados pelo prosseguimento 
 Apesar de algumas continuidades, o governo Lula promoveu um ineditismo histórico: conjugação de crescimento com inclusão social.
 Tal resultado --- levado adiante pelo governo Dilma --- decorre tanto da questão social quando do abandono progressivo do conservadorismo fiscal, reposicionando o papel do Estado no desenvolvimento.
 Em conjunto, tais medidas promoveram uma dinamização do mercado interno e modernização da demanda que não foi acompanhada igualmente pela estrutura produtiva.
-De modo a superar tais desafios, adotou-se uma agenda industrialista que, por sua vez, não foi industrializante.
+De modo a superar tais desafios, adotou-se uma *agenda industrialista que, por sua vez, não foi industrializante*.
 
 ** Governo Dilma - Fase 1
 *** Introdução
 
 No primeiro governo Dilma temos como marco o Estado na posição de ator central na estratégia de crescimento e a utilização de políticas econômicas para incentivar o investimento privado e a expansão econômica.
-Para tanto, existia o reconhecimento da indústria como elemento basilar do crescimento e a importante tarefa de recuperar a competitividade industrial.
+Para tanto, existia o reconhecimento da *indústria* como elemento basilar do crescimento.
 O foco foi defender a competitividade da indústria mantendo o câmbio num patamar favorável e buscando reduzir os custos de infraestrutura e da carga tributária.
 
-Em 2011, o governo Dilma adotou medidas macroeconômicas contracionistas, centradas no corte de gastos do governo, aumento das taxas básicas de juros e "medidas macroprudenciais" para o controle do crédito.
+Em 2011, o governo Dilma adotou medidas macroeconômicas contracionistas, centradas no corte de gastos do governo, aumento das taxas básicas de juros e "medidas macroprudenciais" para o *controle do crédito*.
 Da perspectiva externa, entre 2011-14 o bom cenário externo do miniciclo das commodities de 2010 cedeu.
 Com a ausência do drive externo, ficou a cargo da política econômica doméstica estimular o crescimento, via incentivos ao investimento privado.
-Parcela relevante deste estímulo recaiu à política fiscal.
+# Parcela relevante deste estímulo recaiu à política fiscal.
 
 *** Política fiscal
-- Para a política fiscal, a opção do governo não foi retomar os investimentos públicos, como realizado nos Governos Lula, mas sim pela promoção do investimento privado via isenções fiscais. Uma das críticas é que se realizaram de modo descoordenado para setores produtivos específicos.
-  + Como consequência, reduziu as receitas do Estado e prejudicava o seu endividamento. Além disso, a queda de receitas pelas desonerações somou-se uma menor arrecadação, que resultaram em uma piora progressiva das contas fiscais.
-  + No entanto, o investimento privado não reagiu à política de isenção tributária. Soma-se a isso a desaceleração do investimento público e esgotamento das exportações.
+- Para a política fiscal, a opção do governo não foi retomar os investimentos públicos, como realizado nos Governos Lula, mas sim pela *promoção do investimento privado via isenções fiscais*. Uma das críticas é que se realizaram de modo descoordenado para setores produtivos específicos.
+  + Como consequência, *reduziu as receitas* do Estado e prejudicava o seu endividamento. Além disso, a queda de receitas pelas desonerações somou-se uma menor arrecadação, que resultaram em uma piora progressiva das contas fiscais.
+  + No entanto, o investimento privado *não reagiu* à política de isenção tributária. Soma-se a isso a desaceleração do investimento público e esgotamento das exportações.
 *** Política cambial
-O esforço da era Lula de evitar a valorização cambial fez com que a indústria convivesse com uma taxa de câmbio pouco competitiva. Decisão: intervir no mercado de derivativo em 2011 fez com que a taxa de câmbio flutuasse
+O esforço da era Lula de evitar a desvalorização cambial fez com que a indústria convivesse com uma taxa de câmbio pouco competitiva. Decisão: intervir no mercado de derivativo em 2011 fez com que a taxa de câmbio flutuasse
 - Assim, no primeiro ano do governo Dilma, o acúmulo de reservas internacionais, controles de capitais e operações de swaps cambiais foram ampliados visando reverter a trajetória de apreciação
   + A desvalorização cambial foi insuficiente para compensar sua apreciação no período 2003-10 e estimular as exportações e o investimento privado.
 - A apreciação cambiau reduzir a taxa de lucro no setor da indústria e da agricultura inibindo o investimento
 - Destaca-se que o câmbio apreciado e a política de estímulo ao consumo resultaram em uma crescente importação de bens de consumo.
 *** Política monetária
-Medidas macroprudenciais de controle do crédito foram adotadas e o Banco Central desencadeou o processo de redução dos juros aproveitando o cenário internacional e a baixa pressão dos preços internos.
+Medidas macroprudenciais de controle do crédito foram adotadas e o Banco Central desencadeou o processo de *redução dos juros* aproveitando o cenário internacional e a baixa pressão dos preços internos.
 - Ao invés de elevar a Selic, revertendo parcialmente sua queda, o governo optou por acomodar a inflação por meio de controle de preços administrados
 *** Desaceleração do crescimento
 
 Essa desaceleração pode ser atribuída a múltiplas causas:
-- Falhas na condução na política econômica, que promoveram, por exemplo, contração no consumo das famílias. No consumo, o endividamento das famílias se elevou e, após o choque de juros e a concorrência forçosa no sistema bancário, por meio do uso dos bancos públicos para praticarem menores juros
+- Falhas na condução na política econômica, que promoveram, por exemplo, contração no consumo das famílias. O endividamento das famílias se elevou e, após o choque de juros e a concorrência forçosa no sistema bancário, por meio do uso dos bancos públicos para praticarem menores juros
 - Fatores internacionais (somado a falhas na condução da política econômica), como a Crise do Euro, a redução do ritmo de crescimento chinês, o fim do miniciclo de commodities e o patamar cambial, agiram estabilizando os preços das exportações brasileiras ao mesmo tempo que as importações se expandiram, deteriorando as contas externas e enfraquecendo a indústria nacional.
 - Fatores políticos (desde as manifestações de 2013 até a incerteza eleitoral de 2014), fatores internacionais
 - Fatores institucionais ou jurídicos, particularmente o avanço da operação Lava Jato que afetou setores estratégicos da economia brasileira, como petróleo e gás, construção civil e indústria naval.
@@ -608,25 +608,26 @@ Essa desaceleração pode ser atribuída a múltiplas causas:
 
 ** Segundo Governo Dilma
 *** Virada para uma política econômica ortodoxa em 2015
-Em 2015, diante da fragilidade e dos desequilíbrios da economia brasileira, o governo optou por um choque recessivo com destaque para a austeridade fiscal, choque de preços administrados, cambial e  monetário
+Em 2015, diante da fragilidade e dos desequilíbrios da economia brasileira, o governo optou por um choque recessivo com destaque para a *austeridade fiscal, choque de preços administrados, cambial e  monetário*
 *** Choque fiscal
 
-Em 2015 o governo tentou implementar um programa de consolidação fiscal baseado em corte de gastos. Em meio à recessão, que traz receitas públicas cadentes, e à rigidez dos gastos públicos, tanto 2015 quanto 2016 foram anos de déficit público, isto é, a consolidação fiscal falhou.
+Em 2015 o governo tentou implementar um programa de consolidação fiscal baseado em corte de gastos. Em meio à recessão e à rigidez dos gastos públicos a consolidação fiscal falhou.
 *** Choque cambial
-Após as eleições de 2014 ocorre uma inflexão na política cambial, quando a nova equipe econômica sinaliza ao mercado o fim do programa de leilões de swaps e uma política cambial menos atuante. Essa rápida mudança na taxa de câmbio teve impacto nas estruturas de custos e patrimonial das empresas, contribuiu para o aumento da taxa de inflação e com isso para a redução dos salários reais, impactando negativamente o consumo.
+Essa rápida mudança na taxa de câmbio teve impacto nas estruturas de custos e patrimonial das empresas, contribuiu para o aumento da taxa de inflação e com isso para a redução dos salários reais, impactando negativamente o consumo.
 *** Choque de preços administrados
 
-Diante do represamento de preços administrados pelo setor público, como energia e gasolina, o governo optou por uma estratégia de choque em detrimento de uma estratégia gradualista. Como consequência, o choque de preços administrados foi mais um elemento de pressão de custos para empresas e de redução de renda real para as famílias.
+Diante do represamento de preços administrados pelo setor público, como energia e gasolina, o governo optou por uma estratégia de *choque* em detrimento de uma estratégia gradualista. Como consequência, o choque de preços administrados foi mais um elemento de pressão de custos para empresas e de redução de renda real para as famílias.
 *** Choque monetário
-Diante de uma inflação essencialmente provocada pelo próprio governo, quando ajustou preços administrados e permitiu uma forte desvalorização cambial, o Banco Central deu continuidade aos aumentos na taxa básica de juros. Esse aumento do custo do crédito (e do custo de oportunidade para o investimento produtivo) é outro fator que contribuiu para o cenário contracionista.
+Diante de uma inflação essencialmente provocada pelo próprio governo, quando ajustou preços administrados e permitiu uma forte desvalorização cambial, o Banco Central deu continuidade aos *aumentos na taxa básica de juros*. Esse aumento do custo do crédito (e do custo de oportunidade para o investimento produtivo) é outro fator que contribuiu para o cenário contracionista.
 
 
 ** Governo Temer e Bolsonaro
 *** Diretrizes gerais
-Desde o Governo Temer até o Governo Bolsonaro, houve uma mudança profunda na condução da política econômica, por meio da implementação de políticas austeras e da realização de reformas liberalizantes. Assim, podemos dizer que existe um sentido de continuidade entre a política econômica de Temer/Meirelles e de Bolsonaro/Guedes.
-Reformas liberalizantes:
+Desde o Governo Temer até o Governo Bolsonaro, houve uma mudança profunda na condução da política econômica, por meio da implementação de políticas austeras e da realização de *reformas liberalizantes*. Assim, podemos dizer que existe um sentido de continuidade entre a política econômica de Temer/Meirelles e de Bolsonaro/Guedes.
 
-Da perspectiva das reformas, a agenda do governo tem direcionado a economia para um novo modelo de desenvolvimento, baseado em políticas liberais que visam "destravar" o mercado das amarras do Estado via desregulamentação.
+*** Reformas liberalizantes:
+
+A agenda do governo tem direcionado a economia para um novo modelo de desenvolvimento, baseado em políticas liberais que visam "destravar" o mercado das amarras do Estado via desregulamentação.
 As principais medidas implementadas e anunciadas são:
 
 - Reforma trabalhista: aprovada no final de 2016, promoveu grande flexibilização no mercado de trabalho, tais como: contribuição sindical opcional; mudanças nas regras de demissão, descanso e férias; permite jornada de trabalho até 12 horas; cria modalidade de contratação a termo, trabalho intermitente, etc.;
@@ -636,7 +637,7 @@ As principais medidas implementadas e anunciadas são:
 - Abertura comercial com redução nas tarifas alfandegárias, no contexto da estratégia de “recuperar a competitividade via economia de mercado”;
 *** Políticas ortodoxas:
 **** Política fiscal
-O governo Temer continuou com a busca pela austeridade fiscal, porém desta vez implementada na forma de uma Emenda Constitucional (95/2016), a chamada Regra do Teto de Gastos. Como consequência, limitou por 20 anos as despesas primárias do governo federal à inflação acumulada no Índice de Preços ao Consumidor Amplo (IPCA), visando à queda da participação real dos gastos públicos no PIB à medida que este crescesse em termos reais. Despesas financeiras, como o pagamento de juros ou o montante de amortizações, não entram na regra e, portanto, o limite de variação se aplica apenas aos dispêndios primários.
+O governo Temer continuou com a busca pela austeridade fiscal, porém desta vez implementada na forma de uma Emenda Constitucional (95/2016), a chamada *Regra do Teto de Gastos*. Como consequência, limitou por 20 anos as despesas primárias do governo federal à inflação acumulada no Índice de Preços ao Consumidor Amplo (IPCA), visando à queda da participação real dos gastos públicos no PIB à medida que este crescesse em termos reais. Despesas financeiras, como o pagamento de juros ou o montante de amortizações, não entram na regra e, portanto, o limite de variação se aplica apenas aos dispêndios primários.
 
 **** Política monetária
 Com o governo Temer uma nova equipe assumiu o Banco Central e com ela uma agenda de reformas para o sistema financeiro nacional foi proposta; a mesma agenda foi reformulada e aprofundada no governo Bolsonaro. As medidas vão no sentido geral de diminuir a intervenção e atuação do Estado. Por exemplo, um dos objetivos centrais é a diminuição da participação do governo no mercado de crédito, através da substituição do financiamento público pelo privado.
